--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -24,37 +24,57 @@
     margin-top: 8px;
 }
 
+.mt-12 {
+    margin-top: 12px;
+}
+
 .single {
     padding: 30px 15px;
     margin-top: 40px;
     background: #fcfcfc;
-    border: 1px solid #f0f0f0; }
+    border: 1px solid #f0f0f0;
+}
+
 .single h3.side-title {
     margin: 0;
     margin-bottom: 10px;
     padding: 0;
     font-size: 20px;
     color: #333;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+}
+
 .single h3.side-title:after {
     content: '';
     width: 60px;
     height: 1px;
     background: #ff173c;
     display: block;
-    margin-top: 6px; }
+    margin-top: 6px;
+}
 
 .single ul {
-    margin-bottom: 0; }
-.single li a {
+    margin-bottom: 0;
+}
+
+.single li a, .single .get-key {
     color: #666;
     font-size: 14px;
     text-transform: uppercase;
     border-bottom: 1px solid #f0f0f0;
     line-height: 40px;
     display: block;
-    text-decoration: none; }
+    text-decoration: none;
+}
+
 .single li a:hover {
-    color: #ff173c; }
-.single li:last-child a {
-    border-bottom: 0; }
+    color: #ff173c;
+}
+
+.single li:last-child {
+    border-bottom: 0;
+}
+
+.single li {
+    margin-bottom: 5px;
+}
